; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_net2280.c_ep0_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_net2280.c_ep0_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net2280 = type { i32 }

@PLX_LEGACY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net2280*)* @ep0_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ep0_start(%struct.net2280* %0) #0 {
  %2 = alloca %struct.net2280*, align 8
  store %struct.net2280* %0, %struct.net2280** %2, align 8
  %3 = load %struct.net2280*, %struct.net2280** %2, align 8
  %4 = getelementptr inbounds %struct.net2280, %struct.net2280* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @PLX_LEGACY, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load %struct.net2280*, %struct.net2280** %2, align 8
  call void @ep0_start_228x(%struct.net2280* %10)
  br label %13

11:                                               ; preds = %1
  %12 = load %struct.net2280*, %struct.net2280** %2, align 8
  call void @ep0_start_338x(%struct.net2280* %12)
  br label %13

13:                                               ; preds = %11, %9
  ret void
}

declare dso_local void @ep0_start_228x(%struct.net2280*) #1

declare dso_local void @ep0_start_338x(%struct.net2280*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
